--- a/trial.html
+++ b/trial.html
@@ -17,7 +17,7 @@
            
         </div>
 
-        <div id="Appetizers">
+        <div id="Appetizers for you">
             <h2>Appetizers</h2>
         <dl>
             <dt>Black bean purses</dt>
@@ -27,7 +27,7 @@
         </dl>
         </div>
 
-        <div id="Main courses"> 
+        <div id="Main courses for you"> 
             <h2>Main courses</h2>
         <dl>
             <dt>Shrimp sate kebabs with peanut sauce</dt>
@@ -39,7 +39,7 @@
         </dl>
         </div>
 
-        <div id="Desserts"> 
+        <div id="Desserts for you"> 
             <h2>Desserts</h2>
         <dl>
             <dt>Coconut Grande</dt>
@@ -51,7 +51,7 @@
         </dl>
         </div>
         
-        <div id="Drinks"> 
+        <div id="Drinks for you"> 
             <h2>Main courses</h2>
         <dl>
             <dt>Espresso Martini</dt>
@@ -63,7 +63,7 @@
         </dl>
         </div>
 
-        <div id="Side Meals"> 
+        <div id="Side Meals for you"> 
             <h2>Main courses</h2>
         <dl>
             <dt>Shrimp sate kebabs with peanut sauce</dt>
