--- a/trial.html
+++ b/trial.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>The Maze</title>
+        <title>The Maze Palace</title>
         <link rel="stylesheet" type="text/css" href="deco.css">
     </head>
 
@@ -75,7 +75,7 @@
         </dl>
         </div>
         <div id="Warnings" class="Footnote">
-        <p><sub>* </sub>We are required to warn you that undercooked food is a health risk.</p>
+        <p><sub>* </sub>We are required to warn you that undercooked food is a health risk. You could fall sick</p>
         </div>
         </div>
     </body>
